tests/ui/empty/empty-macro-use.stderr
error: cannot find macro `macro_two` in this scope
  --> $DIR/empty-macro-use.rs:8:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^
   |
help: consider importing this macro
   |
LL + use two_macros::macro_two;
   |

warning: unused attribute
  --> $DIR/empty-macro-use.rs:3:12
   |
LL | #[macro_use()]
   |            ^^ help: remove these parentheses
   |
   = note: using `macro_use` with an empty list is equivalent to not using a list at all
   = note: requested on the command line with `-W unused-attributes`

error: aborting due to 1 previous error; 1 warning emitted

